...
  /// Get label for node type
  String _getNodeTypeLabel(NavigationNodeType type) {
    switch (type) {
      case NavigationNodeType.client:
        return 'Client';
      case NavigationNodeType.mainSite:
        return 'Main Site';
      case NavigationNodeType.subSite:
        return 'Sub Site';
      case NavigationNodeType.equipment:
        return 'Equipment';
    }
  }
...
